<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/settings_max_val_til"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/max_value">

        <EditText
            android:id="@+id/settings_max_val_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/settings_incr_step_til"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/incrementation_step">

        <EditText
            android:id="@+id/settings_incr_step_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/settings_reset_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal|bottom"
        android:background="@drawable/button"
        android:textColor="@android:color/white"
        android:text="@string/reset"/>

</LinearLayout>