<resources>
    <string name="app_name">Counter</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="counter">Counter</string>
    <string name="settings">Settings</string>

    <string name="max_value">Maximum value</string>
    <string name="incrementation_step">Incrementation step</string>
    <string name="reset">Reset</string>
    <string name="counter_reset">The counter was reset</string>
    <string name="counter_reach_max_value">The counter has reached the maximum value.\nThe counter was reset.</string>
    <string name="field_error">Field cannot be empty</string>
    <string name="not_valid_values">Some fields values are not valid.\nThey were restored to last valid value.</string>
</resources>
